Update reflecting the About page

--- a/layouts/partials/share_icons.html
+++ b/layouts/partials/share_icons.html
@@ -23,9 +23,9 @@
     </a>
 
     <!-- Hacker News (Y Combinator) -->
-    <a target="_blank" rel="noopener noreferrer" aria-label="share on Hacker News"
+    <a target="_blank" rel="noopener noreferrer" aria-label="submit to Hacker News"
         href="https://news.ycombinator.com/submitlink?u={{ $pageurl }}&t={{ $title }}"
-        title="Share on Hacker News">
+        title="Submit to Hacker News">
         <svg viewBox="0 0 512 512" height="30" width="30" fill="currentColor">
             <path d="M0 32v448h448V32H0zm21.2 197.2H21c.1-.1.2-.3.3-.4 0 .1 0 .3-.1.4zm218 53.9V384h-31.4V281.3L128 128h37.3l52.7 115.6 52.7-115.6h37.3l-79.8 154.1z"/>
         </svg>
