--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,3 +1,4 @@
 <div class="footer-trademark">
-  © {{ now.Format "2006" }} Oob Skulden™. All rights reserved.
+    <p>Published by <strong>Oob Skulden™</strong></p>
+    <p class="legal">© 2025 Oob Skulden™. All rights reserved.</p>
 </div>
